--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,5 +1,46 @@
-.parent-div{
+/* Login.css */
+
+.parent-div {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
+  height: 100vh;
+}
+
+.text-title {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+
+.google-signin {
+  text-align: center;
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.signin-headtext {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.google-image {
+  width: 100px;
+  height: 100px;
+}
+
+.signin-btn{
+  height: 30px;
+  width: 200px;
+  margin-top: 20px;
 }
