--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -43,4 +43,41 @@
   height: 30px;
   width: 200px;
   margin-top: 20px;
+  border: none;
+  border-radius: 8px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+
 }
+
+.login-container{
+  display: flex;
+  justify-content: center;
+}
+
+.left-content{
+  margin-top: 50px;
+  margin-left: -20px;
+}
+
+.left-image-container{
+  font-size: 20px;
+  margin-top: -900px;
+  margin-left: 100px;
+}
+
+.left-image{
+  height: 500px;
+  border-radius: 20px;
+}
+
+.right-image-container{
+  margin-left: 1300px;
+  margin-top: 50px;
+}
+
+.right-image{
+  height: 400px;
+}
+
+
