--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,4 +1,4 @@
-/* Login.css */
+
 
 .parent-div {
   display: flex;
@@ -47,6 +47,7 @@
   border-radius: 8px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
+  cursor: pointer;
 
 }
 
